--- a/02_jsp/pom.xml
+++ b/02_jsp/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>servlet</artifactId>
+    <artifactId>jsp</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>01_servlet</name>
+    <name>02_jsp</name>
     <packaging>war</packaging>
 
     <properties>
@@ -44,7 +44,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.3.2</version>
-            </plugin><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>9</source><target>9</target></configuration></plugin>
+            </plugin>
         </plugins>
     </build>
 </project>
