--- a/03_model1/pom.xml
+++ b/03_model1/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>jsp</artifactId>
+    <artifactId>model1</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>02_jsp</name>
+    <name>03_model1</name>
     <packaging>war</packaging>
 
     <properties>
